sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
    color=getColor(j)
                  ^