sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var cpt=0
  var color:Color = Color.blue
  for(j<-0 to getTaille-1){
    color=getColor(j)
    if(color==Color.blue){
      echange(cpt,j)
      cpt+=1
    }
  }
}